name:                hs-abci
version:             0.1.1.0
synopsis:            Tendermint's ABCI server library
description:         TBD
homepage:            https://github.com/albertov/hs-abci#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          alberto@toscat.net
copyright:           2017 Alberto Valverde González
category:            Network
build-type:          Simple
extra-source-files:
    README.md
  , src/Network/ABCI/types.proto
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Network.ABCI
    , Network.ABCI.Types
    , Network.ABCI.Internal.Wire
  other-modules:
      Proto.Network.ABCI.Types
  build-depends:
      base >= 4.7 && < 5
    , binary
    , bytestring
    , conduit
    , conduit-extra
    , data-default
    , microlens
    , monad-control
    , network
    , proto-lens
    , proto-lens-protoc
    , text
    , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hs-abci-counter
  hs-source-dirs:      examples
  main-is:             Counter.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -main-is Counter
  build-depends:
      base
    , binary
    , bytestring
    , hex
    , hs-abci
    , stm
    , text
  default-language:    Haskell2010

test-suite hs-abci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , binary
    , bytestring
    , conduit
    , hs-abci
    , hspec
    , hspec-core
    , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
      Network.ABCI.Internal.WireSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/albertov/hs-abci
